Nicer code